--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Syist</title>
   <link rel="stylesheet" href="{% static 'style.css' %}" />
+
+  <meta name="google-site-verification" content="r05cmkjA1lRP0f2DXc1aFLOb7L4iykQDDcW2W7NG1kk" />
 </head>
 <body>
   <header>
