--- a/polls/templates/about.html
+++ b/polls/templates/about.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <header>
-        <a href="/home" class="home-button">Home</a>
+        <a href="/" class="home-button">Home</a>
         <h1>आज की मेरी आवाज</h1>
     </header>
     <div class="post-content">
