--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -26,8 +26,15 @@
   <meta name="twitter:title" content="Syist Group - Learn Python, Coding, and More">
   <meta name="twitter:description" content="Explore free Python courses and tutorials with Syist Group.">
   <meta name="twitter:image" content="https://syist-group.onrender.com/static/images/og-image.jpg">
-
-  <!-- Styles -->
+  
+  <!-- Styles --><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXX');
+</script>
   <link rel="stylesheet" href="{% static 'home.css' %}" />
 </head>
 
