--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -21,7 +21,8 @@
   <meta property="og:url" content="https://syist-group.onrender.com/">
   <meta property="og:image" content="https://syist-group.onrender.com/static/images/og-image.jpg">
 
-  <!-- Twitter Card -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7118906317863823"
+     crossorigin="anonymous"></script>
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Syist Group - Learn Python, Coding, and More">
   <meta name="twitter:description" content="Explore free Python courses and tutorials with Syist Group.">
