--- a/polls/templates/contact.html
+++ b/polls/templates/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7118906317863823"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Contact Syist Group - Get in touch with our team for Python programming courses, tutorials, and support. Learn to code with MrSyist.">
