--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <title>Syist Group | Learn Python, Coding, and Programming Tutorials</title>
+  <title>Syist Group Vadodra Technology </title>
   <meta name="description" content="Join Syist Group to learn Programming, explore Python tutorials, and grow your coding skills. Start your journey with MrSyist.">
   <meta name="keywords" content="Syist Group, MrSyist, Learn Python, Free Coding Courses, Programming Tutorials, CodeWithHarry Inspiration">
   <meta name="author" content="Ashok Kumar Yadav">
