--- a/polls/static/home.css
+++ b/polls/static/home.css
@@ -20,10 +20,14 @@ header {
 }
 
 .logo {
-  font-size: 24px;
-  font-weight: bold;
+    position: absolute;
+    z-index: 1000; /* ऊपर दिखाने के लिए */
 }
 
+.logo img {
+    height: 50px;  /* आप अपनी ज़रूरत अनुसार height कम/ज़्यादा कर सकते हैं */
+    width: auto;
+}
 .search-bar {
   flex: 1;
   max-width: 300px;
